--- a/Deals/Base.lproj/Main.storyboard
+++ b/Deals/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
         <!--Item-->
         <scene sceneID="Tpc-IE-fyw">
             <objects>
-                <viewController id="wsw-En-rJQ" customClass="DealDetailsViewController" customModule="Dollor_Deals" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DealDetailsView" id="wsw-En-rJQ" customClass="DealDetailsViewController" customModule="Dollor_Deals" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Sm0-8F-9g6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
