--- a/Deals/Custom Cells/PurchaseDealsCollectionViewCell.xib
+++ b/Deals/Custom Cells/PurchaseDealsCollectionViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,7 +23,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PurchaseDealsCollectionViewCell" customModule="Deals" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PurchaseDealsCollectionViewCell" customModule="Dollor_Deals" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="202" height="153"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -56,7 +56,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qjY-23-Pk2">
-                        <rect key="frame" x="159.5" y="94.5" width="32.5" height="14"/>
+                        <rect key="frame" x="159.5" y="95" width="32.5" height="14"/>
                         <fontDescription key="fontDescription" name="SFProText-Semibold" family="SF Pro Text" pointSize="12"/>
                         <color key="textColor" red="0.16078431372549018" green="0.80000000000000004" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -76,6 +76,7 @@
                 <constraint firstItem="qfL-gz-nH8" firstAttribute="top" secondItem="Nra-Sz-KHW" secondAttribute="bottom" constant="4" id="dWI-gd-AHr"/>
                 <constraint firstItem="qfL-gz-nH8" firstAttribute="leading" secondItem="Nra-Sz-KHW" secondAttribute="leading" id="gBC-nx-n75"/>
                 <constraint firstItem="3hF-YF-Jwy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="hli-YP-Qd7"/>
+                <constraint firstItem="qjY-23-Pk2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6qH-7v-b4f" secondAttribute="trailing" constant="20" id="rSI-0P-uRw"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="334" height="50"/>
